--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,10 @@ cycler==0.10.0
     # via matplotlib
 django==3.1.12
     # via -r requirements.in
+django-heroku==0.3.1
+	# via john
+dj-database-url==0.5.0
+	# via john
 gevent==20.6.2
     # via -r requirements.in
 gitdb==4.0.5
@@ -30,7 +34,7 @@ kiwisolver==1.2.0
     # via matplotlib
 markdown==3.2.2
     # via -r requirements.in
-matplotlib==3.3.1
+matplotlib==3.4.2
     # via -r requirements.in
 newrelic==5.16.1.146
     # via -r requirements.in
@@ -44,6 +48,8 @@ pillow==8.2.0
     # via matplotlib
 pip-tools==5.3.1
     # via -r requirements.in
+psycopg2==2.9.1
+	# via john
 pyparsing==2.4.7
     # via
     #   matplotlib
@@ -65,6 +71,8 @@ sqlparse==0.3.1
     # via django
 webencodings==0.5.1
     # via bleach
+whitenoise==5.3.0
+	# via john
 zope.event==4.4
     # via gevent
 zope.interface==5.1.0
